hopefully the fix to viewpoer glitch on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,6 @@ textarea {
    .fullscreen-view {
      display: block;
      height: 100vh;
-     min-height: -webkit-fill-available;
      width: auto;
      /*background-color: rgb(255, 255, 255);*/
      
